<resources>
    <string name="app_name">Bakalaurinis</string>
    <string name="register_btn">Registruotis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atsijungti_btn">Atsijungti</string>
    <string name="vartotojas">Vartotojas: </string>
    <string name="prisijunkite">Prisijunkite</string>
    <string name="slapta_odis">slaptažodis</string>
    <string name="registruotis">Registruotis</string>
    <string name="prisijungti">Prisijungti</string>
    <string name="teisingai">Teisingai!</string>
    <string name="t_sti_sprendim">Tęsti sprendimą</string>
    <string name="ok">Tęsti</string>
    <string name="cancel">Atšaukti</string>
    <string name="naujas_slapyvardis">Naujas slapyvardis</string>
    <string name="slaptazodis">Slaptažodis</string>
    <string name="t_sti">Tęsti</string>
    <string name="sprendimu_statistika">Sprendimų statistika</string>
    <string name="slapyvardis_hint">slapyvardis</string>
    <string name="temp_name">Justyna</string>
    <string name="patirties_taskai_temp">2</string>
    <string name="monetos_temp">50</string>
    <string name="mano_profilis_heading">Mano profilis</string>
    <string name="slapyvardis">Slapyvardis:</string>
    <string name="keisti_slapyvardi_btn">Keisti slapyvardį</string>
    <string name="keisti_slaptazodi_btn">Keisti slaptažodį</string>
    <string name="pasalinti_paskyra_btn">Pašalinti paskyrą</string>
    <string name="savaites_top_10_vartotoju_heading">Savaitės top 10 vartotojų</string>
    <string name="registruotis_heading">Registruotis</string>
    <string name="patvirtinti_slaptazodi_hint">patvirtinti slaptažodį</string>
    <string name="back_btn">Atgal</string>
    <string name="total_asnwered_text">Iš viso atsakyta:</string>
    <string name="correctly_answered_temp">200</string>
    <string name="incorrectly_answered">400</string>
    <string name="old_psw">Senas slaptažodis</string>
    <string name="new_psw">Naujas slaptažodis</string>
    <string name="new_psw_repeated">Patvirtinkite naują slaptažodį</string>
    <string name="cancel_btn">Atšaukti</string>
    <string name="save_btn">Išsaugoti</string>
    <string name="account_delete_heading">Veiksmo patvirtinimui įveskite savo slaptažodį</string>
    <string name="plus_num_patirties_taskai">+10</string>
    <string name="plus_num_monetos">+1</string>
    <string name="question_text">Klausimo tekstas</string>
    <string name="answer">Atsakymas:</string>
    <string name="correct_answer_text">Teisingo atsakymo tekstas</string>
    <string name="all_topic_questions_answered">Visi šios temos klausimai teisingai atsakyti!</string>
    <string name="klausimo_verte">Klausimo vertė:</string>
    <string name="btn_submit">Pateikti</string>
    <string name="checkbox">CheckBox</string>
    <string name="skip_btn">Praleisti</string>
    <string name="first">Pirmas</string>
    <string name="second">Antras</string>
    <string name="third">Trecias</string>
    <string name="fourth">Ketvirtas</string>
    <string name="submit_answer_hint">Pateikite atsakymą</string>
    <string name="message_opened_kingdom">Sveikiname! Surinkote 1000 patirties taškų ir nuo Monstro išlaisvinote savo pilį!</string>
    <string name="element_name">Drakonas</string>
    <string name="buy_btn">Pirkti</string>
    <string name="level_name">1 Lygis</string>
    <string name="correct_num">200</string>
    <string name="incorrect_num">150</string>
    <string name="tikslingumas">Tikslingumas</string>
    <string name="percent">25%</string>
    <string name="textview">TextView</string>
    <string name="home">Home</string>

</resources>