<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".view.questions.OneSelectionQuestionFragment">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="199dp"
            android:layout_height="29dp"
            android:layout_marginTop="44dp"
            android:text="@string/klausimo_verte"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSkipOpenQuestion"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="40dp"
            android:text="@string/skip_btn"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.894"
            app:layout_constraintStart_toEndOf="@+id/buttonSubmitOpenQuestion"
            app:layout_constraintTop_toBottomOf="@+id/editTextOpenQuestion" />

        <ImageView
            android:id="@+id/imageViewDisplayImage"
            android:layout_width="190dp"
            android:layout_height="180dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/holder_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOpenQuestionDescription" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="56dp"
            android:src="@drawable/moneta"
            app:layout_constraintBottom_toTopOf="@+id/textViewOpenQuestionDescription"
            app:layout_constraintEnd_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonSubmitOpenQuestion"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:text="@string/btn_submit"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextOpenQuestion" />

        <TextView
            android:id="@+id/textViewExperienceOneSelQuestion"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="10dp"
            android:text="@string/patirties_taskai_temp"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintEnd_toStartOf="@+id/imageView10"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:layout_constraintVertical_bias="0.833" />

        <TextView
            android:id="@+id/textViewOpenQuestionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="165dp"
            android:padding="20dp"
            android:text="@string/question_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="41dp"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="192dp"
            android:src="@drawable/diamond"
            app:layout_constraintBottom_toTopOf="@+id/textViewOpenQuestionDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewCoinsOneSelQuestion"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginEnd="10dp"
            android:text="@string/monetos_temp"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintEnd_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            app:layout_constraintVertical_bias="0.857" />

        <EditText
            android:id="@+id/editTextOpenQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/submit_answer_hint"
            android:inputType="numberDecimal"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDisplayImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>